src/app/components/get-this-title/get-this-title.scss
@import 'variables';
@import 'mixins';


.get-this-title {
    .submenu {
        position: relative;

        p {
            color: color(gray);
        }

        &.pdf .pdf-submenu,
        &.print .print-submenu {
            width: initial;
            height: initial;
            transform: scale3d(1, 1, 1);
            opacity: 1;

        }

        .pdf-submenu,
        .print-submenu {
            opacity: 0;
            width: 0;
            height: 0;
            overflow: hidden;
            transform: scale3d(0, 0, 0);
            transition: opacity 0.2s;
        }

        .btn {
            width: 100%;
            font-variant: normal;
            padding: 1.5rem;
            text-transform: uppercase;
            color: color(neutral-lightest);

            &:hover {
                transform: scale3d(1, 1, 1);
                background-color: darken(color(neutral-medium), 5%);
            }
        }
    }

    .remover {
        cursor: pointer;
        font-size: 2rem;
        line-height: 1rem;
        font-weight: bold;
        position: absolute;
        right: 0;
        top: 0;
        text-align: center;
    }

    .options {
        opacity: 1;
        transition: opacity 0.2s;
        margin-bottom: 1rem;
    }

    .pdf + .options,
    .print + .options {
        width: 0;
        height: 0;
        margin: 0;
        overflow: hidden;
        opacity: 0;
    }

    .option {
        color: color(cyan);
        cursor: pointer;
        font-size: 1.6rem;
        padding: 0.5rem 0;
        border-bottom: 0.1rem solid color(neutral-lighter);

        &:hover {
            color: darken(color(cyan), 10%);
        }

        &:last-child {
            border-bottom: 0;
        }

        a {
            display: block;
            color: color(cyan);

            &:hover {
                color: darken(color(cyan), 10%);
            }
        }
    }

    .fa {
        color: darken(color(cyan), 10%);
        margin-left: 3rem;
        font-size: 1.8rem;

        &::before {
            margin-left: -2.5rem;
        }
    }
}

